--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -40,20 +40,20 @@ jobs:
     ###############################################################################################
     # JOBS CONTEXTS
     ################################################################################################
-      - name: "Dump Github Contexts"
+      - name: "Dump JOB Contexts"
         run: echo '${{ toJSON(job) }}'
     ###############################################################################################
     # STEPS CONTEXTS
     ################################################################################################
-      - name: "Dump Github Contexts"
+      - name: "Dump Steps Contexts"
         run: echo '${{ toJSON(steps) }}'
     ###############################################################################################
     # STRATEGY CONTEXTS
     ################################################################################################
-      - name: "Dump Github Contexts"
+      - name: "Dump strategy Contexts"
         run: echo '${{ toJSON(strategy) }}'
     ###############################################################################################
     # MATRIX CONTEXTS
     ################################################################################################
-      - name: "Dump Github Contexts"
+      - name: "Dump matrix Contexts"
         run: echo '${{ toJSON(matrix) }}'
