--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -41,12 +41,15 @@ jobs:
     # JOBS CONTEXTS
     ################################################################################################
       - name: "Dump JOB Contexts"
-        run: echo '${{ toJSON(job) }}'
+        run: echo '${{ toJSON(job) }}' 
+      
+      -run: echo '${{job.job_id}}'
     ###############################################################################################
     # STEPS CONTEXTS
     ################################################################################################
       - name: "Dump Steps Contexts"
         run: echo '${{ toJSON(steps) }}'
+      -run: echo '${{ steps.name }}'
     ###############################################################################################
     # STRATEGY CONTEXTS
     ################################################################################################
