--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -3,10 +3,10 @@ name: Context test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -42,8 +42,6 @@ jobs:
     ################################################################################################
       - name: "Dump JOB Contexts"
         run: echo '${{ toJSON(job) }}' 
-      
-      - run: echo '${{job.job_id}}'
     ###############################################################################################
     # STEPS CONTEXTS
     ################################################################################################
