--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -42,6 +42,7 @@ jobs:
     ################################################################################################
       - name: "Dump JOB Contexts"
         run: echo '${{ toJSON(job) }}' 
+        run:  echo "JOB STATUS is- ${{ job.status }}"
     ###############################################################################################
     # STEPS CONTEXTS
     ################################################################################################
