--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -44,6 +44,7 @@ jobs:
         run: echo '${{ toJSON(job) }}' 
         
       - run:  echo "JOB STATUS is- ${{ job.status }}"
+      # Possible values are success, failure or cancelled
     ###############################################################################################
     # STEPS CONTEXTS
     ################################################################################################
