--- a/.github/workflows/UploadlogsorArtifact.yml
+++ b/.github/workflows/UploadlogsorArtifact.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           mkdir ${{ runner.temp}}/fail_logs
           chmod +x ./failingbuild.sh
-          ./failingbuild.sh --log-path ${{ runner.temp }}/fail_logs/fail.txt
+          ./failingbuild.sh >> ${{ runner.temp }}/fail_logs/fail.txt
       - name: Upload logs
         uses: actions/upload-artifact@v2
         with:
