--- a/.github/workflows/StrategyMatrix.yml
+++ b/.github/workflows/StrategyMatrix.yml
@@ -1,3 +1,8 @@
+####################################################################
+# Build with different version of maven and Java
+# Using Strategy and Matrix
+####################################################################
+
 name: StrategyMatrix
 on:
   push:
@@ -10,9 +15,17 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    # Using Strategy and Matrix
+    strategy:
+      matrix:
+        maven: [ '3.5.4', '3.6.3', '3.8.2' ]
+        java: ['8' , '11', '16']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: Setup Maven
+        uses: s4u/setup-maven-action@v1.2.1
         with:
-          java-version: '11'
-      - run : java -cp java HELLOWORLD
+          java-version: ${{ matrix.java }}
+          maven-version: ${{ matrix.maven }}
+      - name: Build with Maven
+        run: mvn verify
+
