--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -37,6 +37,5 @@ jobs:
       - run: |
           chmod +x deploy.sh
 # Deploy script in our code need 1 args
-          ./deploy.sh ${{ needs.build.outputs.build_id }} 
+          ./deploy.sh --build ${{ needs.build.outputs.build_id }} 
       
-
