--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           chmod +x build.sh
           ./build.sh
-          echo "::set-output name=build_id::1"
+          echo "::set-output name=build_id::$BUILD_ID"
 
   deploy:
     needs: build
@@ -35,7 +35,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          chmod +x deploy.sh
-# Deploy script in our code need 1 args
-          ./deploy.sh ${{ needs.build.outputs.build_id }} 
+          echo "The previous job build id is: ${{ needs.build.outputs.build_id}}"
       
