--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -17,6 +17,7 @@ jobs:
     # Set this Jobs output in build_id var
     outputs: 
       output1: $ {{ steps.buildStep.outputs.test1 }}
+      selectedAvenger: $ {{ steps.buildStep.outputs.avenger }}
     steps:
       - uses: actions/checkout@v2
 
@@ -24,6 +25,7 @@ jobs:
         id: buildStep
         run: |
           echo "::set-output name=test1::hello"
+          echo "::set-output name=avenger::HULK"
 
   deploy:
     needs: build
@@ -34,4 +36,5 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           echo "The previous job build id is: ${{ needs.build.outputs.output1 }}"
+          echo "Avenger is: ${{ needs.build.outputs.selectedAvenger }}"
       
