--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -16,15 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     # Set this Jobs output in build_id var
     outputs: 
-      output1: $ {{ steps.step1.outputs.test }}
+      output1: $ {{ steps.step1.outputs.output1 }}
     steps:
       - id: step1
-        run: echo "::set-output name=test::hello"
+        run: echo "::set-output name=output1::hello"
 
   job2:
     needs: job1
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Printing Outputs"
-          echo ${{ needs.job1.outputs.output1 }}
+      - run: echo ${{ needs.job1.outputs.output1 }}
