--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -16,13 +16,18 @@ jobs:
     runs-on: ubuntu-latest
     # Set this Jobs output in build_id var
     outputs: 
-      output1: $ {{ steps.step1.outputs.output1 }}
+      output1: $ {{ steps.step1.outputs.test }}
+      output2: $ {{ steps.step1.outputs.test }}
     steps:
       - id: step1
-        run: echo "::set-output name=output1::hello"
+        run: echo "::set-output name=test::hello"
+      - id: step2
+        run: echo "::set-output name=test::world"
+      - id: Display
+        run: echo "${{ steps.step1.outputs.test }}"
 
   job2:
     needs: job1
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ needs.job1.outputs.output1 }}
+      - run: echo ${{ needs.job1.outputs.output1 }}  ${{ needs.job1.outputs.output2 }}
