--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -30,4 +30,4 @@ jobs:
     needs: job1
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ needs.job1.outputs.output1 }}  ${{ needs.job1.outputs.output2 }}
+      - run: echo '${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}'
