--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -14,20 +14,17 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    # Set this Jobs output in build_id var
-    outputs: 
-      output1: $ {{ steps.step1.outputs.test }}
-      output2: $ {{ steps.step1.outputs.test }}
+    outputs:
+      url: ${{ steps.step1.outputs.url }} # map step output to job output
     steps:
       - id: step1
-        run: echo "::set-output name=test::hello"
-      - id: step2
-        run: echo "::set-output name=test::world"
-      - id: Display
-        run: echo "${{ steps.step1.outputs.test }}"
+        name: send url to other job
+        run: echo "::set-output name=url::https://myurl.com"
 
   job2:
-    needs: job1
     runs-on: ubuntu-latest
+    needs: job1
     steps:
-      - run: echo '${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}'
+      - run: user/some-action@v1
+        with:
+          url: ${{ needs.job1.outputs.url }} # grab job output here
