--- a/.github/workflows/needs.yml
+++ b/.github/workflows/needs.yml
@@ -25,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: user/some-action@v1
-        with:
-          url: ${{ needs.job1.outputs.url }} # grab job output here
+      - run: echo ${{ needs.job1.outputs.url }} # grab job output here 
+      # - run: user/some-action@v1
+      #   with:
+      #     url: ${{ needs.job1.outputs.url }} # grab job output here
