--- a/.github/workflows/reuseworkflowcaller.yml
+++ b/.github/workflows/reuseworkflowcaller.yml
@@ -13,20 +13,21 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      image_name:
+      build_id:
         required: true
+        type: number
+      deploy_target:
         type: string
-      tag:
-        type: string
+        required: true
 
 jobs:
-  build-image:
+  deploy_job:
     # provide path of workflow, it should be public, in same repo or same org
     uses: ankush56/helloWorld/.github/workflows/reuseworkflow.yml@master
     #Inputs and secrets are defined in parent workflow we calling. We provide values here
     with:
-      image_name: "alpine"
-      tag: v1
+      build_id: 1
+      deploy_target: "SERVER1"
       # secrets:
       #   registry_username: ${{ secrets.REG_USER }}
       #   registry_password: ${{ secrets.REG_PASS }}      
