--- a/.github/workflows/conditionstest.yml
+++ b/.github/workflows/conditionstest.yml
@@ -24,6 +24,7 @@ jobs:
     # If you dont specify name for step, it will show command as name
       - name: "Check condition"
         run: echo "This run on push"   
+        -run:blabla
 
       - run: echo "${{ github.event_name }}"
   JOB2-pull_request:
