--- a/.github/workflows/conditionstest.yml
+++ b/.github/workflows/conditionstest.yml
@@ -32,6 +32,8 @@ jobs:
         run: echo "hello"
       - name: "Run More steps"
         run: echo "World"      
+      - name: "Some Failing Step"
+        run: fail fail fail
       - name: "Check Previous Steps success"
         if: ${{ success() }}
         run: echo "Previous job was a success"
