--- a/.github/workflows/conditionstest.yml
+++ b/.github/workflows/conditionstest.yml
@@ -34,6 +34,9 @@ jobs:
         run: echo "World"      
       - name: "Some Failing Step"
         run: fail fail fail
+      - name: "Check Previous Steps success failure"
+        if: ${{ failure() }}
+        run: echo "Previous job has failed"
       - name: "Check Previous Steps success"
         if: ${{ success() }}
         run: echo "Previous job was a success"
