--- a/.github/workflows/StepsStatuscheck.yml
+++ b/.github/workflows/StepsStatuscheck.yml
@@ -1,4 +1,9 @@
 ####################################################################
+# Composite way to check
+#      - name: "Check failing job"
+#        if: ${{ job.status == 'failure' }}
+#        run: echo "Job is failing"
+
 # Returns True when none of previous steps have failed or cancelled
 # if: ${{ success() }}
 
@@ -14,10 +19,10 @@ name: Steps STatus Test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  # push:
-  #  branches: [ master ]
-  # pull_request:
-  #  branches: [ master ]
+  push:
+   branches: [ master ]
+  pull_request:
+   branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
