--- a/.github/workflows/JavaCI.yml
+++ b/.github/workflows/JavaCI.yml
@@ -2,7 +2,7 @@ name: Java CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ $default-branch ]
+    branches: [ feature/*, release/*, master ]
   pull_request:
     branches: [ $default-branch  ]
 
