--- a/.github/workflows/JavaCI.yml
+++ b/.github/workflows/JavaCI.yml
@@ -21,3 +21,6 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+      
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
