--- a/pom.xml
+++ b/pom.xml
@@ -30,4 +30,12 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+		<repository>
+		<id>github</id>
+		<name>GitHub Packages</name>
+		<url>https://maven.pkg.github.com/ankush56/helloWorld</url>
+		</repository>
+    </distributionManagement>
+
 </project>
