--- a/.github/workflows/JavaCI.yml
+++ b/.github/workflows/JavaCI.yml
@@ -22,5 +22,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
       
-      - name: Build with Maven
+      - name: Build with Maven   #MVN build package
         run: mvn -B package --file pom.xml
+      
+      - name: Publish Artifact Package
+        run: mvn deploy
