--- a/.github/workflows/JavaCI.yml
+++ b/.github/workflows/JavaCI.yml
@@ -26,4 +26,6 @@ jobs:
         run: mvn -B package --file pom.xml
       
       - name: Publish Artifact Package
-        run: mvn deploy
+        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+        env:
+          GITHUB_TOKEN: {{ github.token }}
