--- a/.github/workflows/JavaCI.yml
+++ b/.github/workflows/JavaCI.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Publish Artifact Package
         run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
