--- a/.github/workflows/javacd.yml
+++ b/.github/workflows/javacd.yml
@@ -36,6 +36,7 @@ jobs:
   
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment: 
       name: 'DEVELOPMENT'
       #url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
