--- a/.github/workflows/javacd.yml
+++ b/.github/workflows/javacd.yml
@@ -39,7 +39,7 @@ jobs:
     needs: build
     environment: 
       name: 'DEVELOPMENT'
-      #url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     steps:
       - name: Download Artifact from build job
         uses: actions/download-artifact@v2
@@ -47,4 +47,8 @@ jobs:
           name: helloworld
       - name:  Deploying to Azure web app
         id: deploy-to-webapp
-        run: echo "Deploying on ASE APP1"
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }} 
+          package: '*.jar'
