--- a/.github/workflows/ifelseconditions.yml
+++ b/.github/workflows/ifelseconditions.yml
@@ -49,5 +49,5 @@ jobs:
     # if statement without  ${{ }} as if keyword evaluates itself
     if: runner.os == 'ubuntu-latest'
     steps:
-      run: echo "This wont run"
+      - run: echo "This wont run"
   
