--- a/.github/workflows/javacd.yml
+++ b/.github/workflows/javacd.yml
@@ -1,10 +1,10 @@
 name: Java CD
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ feature/*, release/*, master ]
-  pull_request:
-    branches: [ $default-branch  ]
+  # push:
+  #   branches: [ feature/*, release/*, master ]
+  # pull_request:
+  #   branches: [ $default-branch  ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
