--- a/.github/workflows/statusBadge.yml
+++ b/.github/workflows/statusBadge.yml
@@ -10,10 +10,10 @@
 name: Status Badge
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ feature/*, release/*, master ]
-  pull_request:
-    branches: [ $default-branch  ]
+  # push:
+  #   branches: [ feature/*, release/*, master ]
+  # pull_request:
+  #   branches: [ $default-branch  ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
