--- a/.github/workflows/ifelseconditions.yml
+++ b/.github/workflows/ifelseconditions.yml
@@ -8,10 +8,10 @@ name: IF ELSE Conditions
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  # push:
-  #  branches: [ master ]
-  # pull_request:
-  #  branches: [ master ]
+  push:
+   branches: [ master ]
+  pull_request:
+   branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -42,7 +42,7 @@ jobs:
     # if statement without  ${{ }} as if keyword evaluates itself
     if: runner.os == 'ubuntu-latest'
     steps:
-      run: echo "This will run if runner os is ubuntu latest"
+      - run: echo "This will run if runner os is ubuntu latest"
 
   job4:
     runs-on: windows-latest
