--- a/.github/workflows/containerTest.yml
+++ b/.github/workflows/containerTest.yml
@@ -16,15 +16,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  job1:
+  node-docker:
     runs-on: ubuntu-latest
+    container:
+      image: node:14.15.0-alpine3.12
     steps:
     # If you dont specify name for step, it will show command as name
       - name: "Step1"
         run: echo "Hello Step1"
-  job2:
-    container: node:14.16
-    steps:
-    # If you dont specify name for step, it will show command as name
-      - name: "Say Hello step"
-        run: echo "Hello Action"
